# bazarr-rtl

./: .flake8  Dockerfile  README.md  build.sh
.github/workflows/: build.yml  docker-image.yml
root/etc/cont-init.d/: 98-rtl-fix
root/opt/bazarr-rtl/: README.md  pyproject.toml
root/opt/bazarr-rtl/src/bazarr_rtl/: cli.py  srt_fix.py
root/opt/bazarr-rtl/tests/: bad.heb.srt  fixed.heb.srt  test_rtl.py
root/opt/bazarr_rtl/: README.md  pyproject.toml
root/opt/bazarr_rtl/src/rtl_srt_fix/: _rtl_fix.py
root/opt/bazarr_rtl/tests/: test_rtl.py
root/opt/rtl_fix/: fix
scripts/: rtl_fix.py
tests/: test_rtl.py
